--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Dancing+Script:400,700&display=swap');
+$font:font-family: 'Abril Fatface', cursive;
+font-family: 'Dancing Script', cursive;
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +13,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.tooltip{
+ position: absolute;
+  background: white;
+  border: 1px solid black;
+}
+
+.pie{
+  padding: 0 10px;
 }
