--- a/src/index.scss
+++ b/src/index.scss
@@ -27,14 +27,14 @@ min-height: 100vh;
     display: flex;
     flex-direction: column;
     background-color: #492F29;
-    min-width: 353px;
+    min-width: 289px;
     color: white;
-    padding: 49px 32px 32px;
+    padding: 32px 32px 32px;
 
 
     .sticky_top{
       position: sticky;
-      top: 49px;
+      top: 32px;
       min-height: inherit;
     }
 
@@ -89,7 +89,8 @@ min-height: 100vh;
   }
   .right_side{
     flex-direction: column;
-    background: #EEEEEE;
+    background: #F1F8FF;
+    padding-top: 14px;
 
     .bottom{
       height: 550px;
@@ -158,6 +159,7 @@ min-height: 100vh;
 
   .line_breaker {
     flex-basis: 100%;
+    height: 40px;
   }
 
   .pies_in_month{
@@ -175,7 +177,7 @@ min-height: 100vh;
     font-weight: bold;
     font-size: 24px;
     line-height: 90%;
-    padding-left: 8px;
+    padding-left: 14px;
     display: flex;
     padding-top: 40px;
     align-items: center;
@@ -198,12 +200,13 @@ span.year{
   &.visible{
     display: inherit;
     margin-right: 15px;
+    margin-top: 11px;
   }
 }
 
 span.month{
   transform: rotate(-90deg);
-  height: 1em;
+  height: 0.4em;
 
 }
 
@@ -261,6 +264,7 @@ span.month_wrapper{
       font-size: 12px;
       line-height: 14px;
       letter-spacing: 0.04em;
+      text-transform: uppercase;
     }
 
     .name, .name a{
@@ -271,7 +275,7 @@ span.month_wrapper{
       line-height: 28px;
       display: flex;
       align-items: flex-end;
-      margin-bottom: 17px;
+      margin-bottom: 8px;
       color: inherit;
     }
 
@@ -281,16 +285,20 @@ span.month_wrapper{
       font-weight: normal;
       font-size: 24px;
       line-height:22px;
-      margin-bottom: 0.5em;
+      margin-bottom: 0.2em;
     }
   }
 }
 
 .pie{
-  padding: 41px 3px 0 0;
+  padding: 24px 3px 0 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .number{
+    padding-bottom: 3px;
+  }
 
 
   img{
