--- a/src/index.scss
+++ b/src/index.scss
@@ -132,11 +132,11 @@ min-height: 100vh;
 
   line{
     stroke-linecap: round;
-    stroke-width: 1;
+    stroke-width: 0.5;
     stroke:white;
     &.hovered{
       transition: all ease 0.5s;
-      stroke-width: 17;
+      stroke-width: 18;
     }
   }
 
@@ -146,6 +146,10 @@ min-height: 100vh;
       transition: all ease 0.5s;
       fill:white;
     }
+  }
+
+  circle.hovered + text{
+    fill: black;
   }
 
 
