--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,13 @@
 $font_abril: 'Abril Fatface', cursive;
 $font_dancing: 'Dancing Script', cursive;
 
+$color_chocolad: #492F29;
+
+@mixin for-phone-only {
+  @media (max-width: 700px), (max-height: 420px) and (orientation: landscape) { @content; }
+}
+
+
 body, html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -28,6 +35,9 @@ body, html {
     color: white;
     padding: 32px 32px 32px;
 
+    @include for-phone-only{
+      display: none;
+    }
 
     .sticky_top {
       position: sticky;
@@ -72,20 +82,6 @@ body, html {
       margin-bottom: 9px;
     }
 
-    .footer {
-      margin-top: auto;
-      font-family: $font_dancing;
-      font-size: 24px;
-      line-height: 90%;
-
-      a {
-        color: inherit;
-        text-decoration: none;
-        border-bottom: 1px solid rgba(255, 255, 255, .5);
-        display: inline-block;
-        line-height: 0.85;
-      }
-    }
   }
 
   .right_side {
@@ -104,6 +100,10 @@ body, html {
       font-size: 32px;
       line-height: 29px;
       color: #492F29;
+
+      @include for-phone-only{
+        display: none;
+      }
     }
   }
 
@@ -147,7 +147,7 @@ body, html {
   }
 
   circle {
-    fill: #492F29;
+    fill: $color_chocolad;
     cursor: pointer;
 
     &.hovered {
@@ -167,10 +167,17 @@ body, html {
   flex-wrap: wrap;
   padding-right: 100px;
   padding-left: 32px;
+  @include for-phone-only{
+    overflow: hidden;
+    padding: 0 10px 350px;
+  }
 
   .line_breaker {
     flex-basis: 100%;
     height: 40px;
+    @include for-phone-only{
+      height: 1px;
+    }
   }
 
   .pies_in_month {
@@ -248,6 +255,7 @@ body, html {
   flex-direction: column;
   align-items: center;
   margin-top: 24px;
+
 
   .number {
     padding-bottom: 3px;
@@ -354,4 +362,54 @@ body, html {
 
 #root {
   font-family: $font_abril;
+}
+
+.footer {
+  margin-top: auto;
+  font-family: $font_dancing;
+  font-size: 24px;
+  line-height: 90%;
+  @include for-phone-only{
+    padding: 23px;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+    border-bottom: 1px solid rgba(255, 255, 255, .5);
+    display: inline-block;
+    line-height: 0.85;
+  }
+}
+
+.only-for-the-phone{
+  display: none;
+  @include for-phone-only{
+    display: block;
+
+    &.slogan{
+      color: $color_chocolad;
+      padding: 0 10px;
+
+      h1 {
+        font-family: $font_abril;
+        font-size: 45px;
+        font-weight: 400;
+        line-height: 61px;
+        margin: 0 0 5px;
+      }
+
+      h2 {
+        font-family: $font_dancing;
+        font-size: 32px;
+        font-weight: normal;
+        line-height: 90%;
+        margin-bottom: 35px;
+      }
+    }
+
+
+  }
+
+
 }
